--- a/curs3/vue/ex1.html
+++ b/curs3/vue/ex1.html
@@ -20,8 +20,8 @@
 
     <script src="https://unpkg.com/vue@3"></script>
     <script>
-        const { createApp } = Vue;
-        let app = createApp({
+        
+        let app = Vue.createApp({
           data() {
             return {
               message: 'Hello Vue!',
