--- a/curs5/ap1.html
+++ b/curs5/ap1.html
@@ -33,7 +33,7 @@
     element = React.createElement('h1', {className: 'linkAcademy'}, 'Hello React!') 
     ReactDOM.render(element, document.getElementById('root2')); 
  </script> 
- <style scope>
+ <style scoped>
     .linkAcademy{
         color: red;
     }
