--- a/curs5/ap1.html
+++ b/curs5/ap1.html
@@ -30,7 +30,7 @@
     </script>
 
 <script language="JavaScript"> 
-    element = React.createElement('h1', {className: 'linkAcademy'}, 'Hello React!') 
+    element = React.createElement('h1', Hello{className: 'linkAcademy'}, ' React!') 
     ReactDOM.render(element, document.getElementById('root2')); 
  </script> 
  <style scoped>
