--- a/curs5/ap2.html
+++ b/curs5/ap2.html
@@ -19,10 +19,10 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <!-- Load our React component. -->
     <script type="text/babel">
-        function Hello() {
-          return <h1>Hello LinkAcademy!</h1>;
+        function Hello(props) {
+          return <h1>Hello {props.prenume} {props.nume }</h1>;
         }
-        ReactDOM.render(<Hello />, document.getElementById('root'))
+        ReactDOM.render(<Hello  prenume="Dan" nume="Popescu"/>, document.getElementById('root'))
       </script>
 
 </body>
